Feat: Implement Get all endpoint for CareerService

--- a/CareerService/appsettings.json
+++ b/CareerService/appsettings.json
@@ -1,4 +1,12 @@
 {
+  
+  "MongoDB": {
+    "ConnectionString": "mongodb+srv://GioxBRUSH:mongo123@cluster0.6tkvd.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0",
+    "DatabaseName": "CareerService",
+    "CollectionName": "Careers"
+  },
+  
+  
   "Logging": {
     "LogLevel": {
       "Default": "Information",
