--- a/CareerService/CareerService.csproj
+++ b/CareerService/CareerService.csproj
@@ -4,9 +4,12 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <IncludeHttpRuleProtos>true</IncludeHttpRuleProtos>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Grpc.JsonTranscoding" Version="8.0.4" />
+    <PackageReference Include="Google.Api.CommonProtos" Version="2.15.0" />
     <PackageReference Include="Google.Protobuf" Version="3.28.3" />
     <PackageReference Include="Grpc.AspNetCore" Version="2.67.0" />
     <PackageReference Include="Grpc.Core" Version="2.46.6" />
@@ -21,7 +24,7 @@
   </ItemGroup>
   
   <ItemGroup>
-    <Protobuf Include="Src\Protos\career.proto" GrpcServices="Server" />
+    <Protobuf Include="Src\Protos\*.proto" GrpcServices="Server" />
   </ItemGroup>
 
 
